--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,10 @@ dotenvy = "0.15"
 mongodb = "3.2"
 futures = "0.3"
 
+# Documentation
+utoipa = { version = "5.3.1", features = ["axum_extras", "uuid", "chrono"] }
+utoipa-swagger-ui = { version = "9.0.0", features = ["axum"] }
+
 # Utils
 uuid = { version = "1.0", features = ["v4", "serde"] }
 chrono = { version = "0.4", features = ["serde"] }
